Update NoIntViBean.java